--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+reqwest = "0.11.12"
+regex="1"
+serde_json = "1.0.87"
+
