--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 reqwest = "0.11.12"
 regex="1"
 serde_json = "1.0.87"
+dotenv = "0.15.0"
