--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-mangakakalot"
-version = "0.1.3"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,4 +15,5 @@ zip = "0.6.3"
 walkdir = "2.3.2"
 term_size = "0.3.2"
 select = "0.6.0"
+url = "2.3.1"
 
