--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,18 @@
 [package]
-name = "rust-mangakakalot"
+name = "mkkl-dl"
 version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-reqwest = "0.11.12"
-regex="1"
-serde_json = "1.0.87"
 dotenv = "0.15.0"
-zip = "0.6.3"
-walkdir = "2.3.2"
-term_size = "0.3.2"
+regex="1"
+reqwest = "0.11.12"
 select = "0.6.0"
+serde_json = "1.0.87"
+term_size = "0.3.2"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 url = "2.3.1"
-
+walkdir = "2.3.2"
+zip = "0.6.3"
