--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "4.2.5"
 dotenv = "0.15.0"
+inquire = "0.6.1"
+paste = "1.0.12"
 regex="1"
 reqwest = "0.11.12"
 select = "0.6.0"
