--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4.2.5"
+anyhow = "1.0.71"
+clap = { version = "4.1.9", features = ["derive", "suggestions"] }
+clap_complete = "4.1.5"
+colored = "2.0.0"
 dotenv = "0.15.0"
 inquire = "0.6.1"
 paste = "1.0.12"
